--- a/examples/expLib/multi/exp.yaml
+++ b/examples/expLib/multi/exp.yaml
@@ -1,2 +1,18 @@
 expname: Topo-1
-parameters: []
+parameters:
+    - paramObj: Interface
+      attribute: '*'
+      param: trace
+      value: "true"
+    - paramObj: Switch
+      attribute: '*'
+      param: trace
+      value: "true"
+    - paramObj: Router
+      attribute: '*'
+      param: trace
+      value: "true"
+    - paramObj: Host
+      attribute: '*'
+      param: trace
+      value: "true"
